<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_welcomeHeader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_farming_health_assistant"
        android:textAlignment="center"
        android:textColor="#6B0D55"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_welcomeHeader" />


    <TextView
        android:id="@+id/email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="312dp"
        android:layout_marginRight="312dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_header" />

    <EditText
        android:id="@+id/signup_email_input"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_your_email_address_here"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_header"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_input" />

    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:autofillHints="Nenosiri"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_your_password_here"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_header"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sign_up"
        android:textSize="14sp"

        app:backgroundTint="#6B0D55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_input"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="107dp"
        android:layout_marginRight="107dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <Button
        android:id="@+id/login_link_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#51B73B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_have_an_account" />



</androidx.constraintlayout.widget.ConstraintLayout>